# OC_P10_SoftDesk

./: README.md  hello.py  pyproject.toml  requirements.txt
src/: db.sqlite3
src/Projects/: models.py  serializers.py  urls.py  views.py
src/Projects/migrations/: 0001_initial.py
src/SoftDesk/: settings.py  urls.py
src/SoftDeskAPI/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/SoftDeskAPI/migrations/: 0001_initial.py  0002_initial.py  0002_project.py  0003_alter_project_name_alter_project_type_contributors.py  0003_alter_project_name_alter_project_type_issue_and_more.py  0004_alter_project_type_issue.py  0004_comment.py
src/SoftDeskUser/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
src/SoftDeskUser/migrations/: 0001_initial.py
src/UserAuth/: admin.py  models.py  serializers.py  urls.py  views.py
src/UserAuth/migrations/: 0001_initial.py
